<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Android Trivia</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_entr_your_email">Please entr your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="register">Register</string>
    <string name="problem">Problem</string>
    <string name="contactNo">Contact No - 012-3456789
                             Email - KLTARUC@gmail.com</string>
    <string name="yellowBrick">Yellow Brick</string>
    <string name="redBrick">Red Brick</string>
    <string name="blueBrick">Blue Brick</string>
    <string name="time">7.00a.m - 5.00p.m</string>
    <string name="cafe">Cafe</string>
    <string name="restauTown">Restaurent Town</string>
    <string name="noodles">Noodles</string>
    <string name="masakM">Masakan Malaysia</string>
    <string name="indo">Indo Deli</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="onGoing">On Going</string>
    <string name="orderHistory">Order History</string>
    <string name="voucher">Voucher</string>
    <string name="pay">Pay</string>
    <string name="success">Success</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="login">login</string>
    <string name="view_order">View Order</string>
    <string name="cart">Cart</string>
    <string name="contact_us">Contact Us</string>
    <string name="WestCampus">West Campus</string>
    <string name="EastCampus">East Campus</string>
</resources>
