<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".yellowBrick">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="84dp"
            android:text="@string/time"
            android:textColor="#1E1D1D"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="168dp"
            android:text="@string/yellowBrick"
            android:textColor="#151313"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="210dp"
            android:layout_height="147dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="324dp"
            android:src="@drawable/image5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="206dp"
            android:layout_height="133dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="556dp"
            android:src="@drawable/image6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe"
            android:textColor="#191818"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.803"
            tools:layout_editor_absoluteX="215dp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restauTown"
            android:textColor="#151515"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="279dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>