<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blueBrick">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="92dp"
            android:text="@string/time"
            android:textColor="#121111"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="44dp"
            android:text="@string/blueBrick"
            android:textColor="#222020"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="166dp"
            android:layout_height="179dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="292dp"
            android:src="@drawable/image3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="170dp"
            android:layout_height="162dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="536dp"
            android:src="@drawable/image4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </ImageView>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noodles"
            android:textColor="#171616"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintVertical_bias="0.762"
            tools:layout_editor_absoluteX="172dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masakM"
            android:textColor="#191818"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.682"
            tools:layout_editor_absoluteX="132dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>