<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".redBrick">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian"
            android:textColor="#191818"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.837" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="64dp"
            android:text="@string/time"
            android:textColor="#1C1B1B"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="48dp"
            android:text="@string/redBrick"
            android:textColor="#191818"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="162dp"
            android:layout_height="150dp"
            android:layout_marginStart="124dp"
            android:layout_marginTop="288dp"
            android:src="@drawable/image1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="151dp"
            android:layout_height="163dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="536dp"
            android:src="@drawable/image2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </ImageView>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indo"
            android:textColor="#201E1E"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.903" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>