<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactUs">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="64dp"
            android:layout_height="17dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="79dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/problem"
            android:textColor="#1B1A1A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="350dp"
            android:layout_height="209dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="110dp"
            android:text="Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="195dp"
            android:layout_height="126dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/contactNo"
            android:textColor="#131313"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>